k8s/devframe-web-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: devframe-web-deployment
  labels:
    app: devframe-web
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: devframe-web
  template:
    metadata:
      labels:
        app: devframe-web
    spec:
      containers:
      - name: devframe-web
        image: devframe/devframe-web
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "500m"
